Fix spacing

--- a/src/components/Auth/_Auth.scss
+++ b/src/components/Auth/_Auth.scss
@@ -177,7 +177,7 @@
         }
 
         .sub-account {
-          margin-bottom: 15px;
+          margin-bottom: 25px;
         }
 
         .sign-in-user--item {
